<resources>

    <string name="app_name">Criminal Intent</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_crime">CrimeActivity</string>
    <string name="crime_title_hint">Enter a title for the crime</string>

    <!-- fragment_crime -->
    <string name="title_label">Title</string>
    <string name="details_label">Details</string>
    <string name="checkbox_title">Solved</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>

    <!-- DatePickerFragment and TimePickerFragment -->
    <string name="date_picker_title">Date of crime:</string>
    <string name="time_picker_title">Time of crime:</string>

    <!-- Menu -->
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$s crimes</string>
    <string name="delete_crime">Delete Crime</string>



</resources>
