<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrimeFragment" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/titleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_label"
            android:textAllCaps="true"
            android:layout_marginLeft="4dp"/>

        <EditText android:id="@+id/crime_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/crime_title_hint"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

        <TextView
            android:id="@+id/detailsLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details_label"
            android:textAllCaps="true"
            android:layout_marginLeft="4dp"/>

        <Button
            android:id="@+id/date_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

        <Button
            android:id="@+id/time_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

        <CheckBox
            android:id="@+id/solved_checkbox"
            android:text="@string/checkbox_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp" />

        <Button
            android:id="@+id/crime_suspect"
            android:text="@string/crime_suspect_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

        <Button
            android:id="@+id/crime_report"
            android:text="@string/crime_report_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>